# fuckburl-bot

./: .gitignore  Cargo.toml  README
src/: config.example.toml  event.rs  main.rs  replacer.rs  util.rs
