[package]
name = "fuckburl-bot"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
strip = "symbols"
panic = "abort"
lto = "thin"

[profile.release.package.frankenstein]
opt-level = "s"

[dependencies]
anyhow = "1.0"
lazy_static = "1.4"
v_htmlescape = "0.15.8"

form_urlencoded = "1.1"
regex = "1"
fancy-regex = "0.11.0"

clap = { version = "4.0", features = ["derive", "cargo", "wrap_help", "env"] }
clap-verbosity-flag = "2.0"

log = "0.4"

async-stream = "0.3"

futures = { version = "0.3" }
futures-util = "0.3"

serde = { version = "1.0", features = ["derive"] }
toml = "0.7.3"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls-native-roots", "json", "gzip", "deflate", "socks"]

[dependencies.tokio]
version = "1.24"
default-features = false
features = ["rt", "macros", "parking_lot"]

[dependencies.log4rs]
version = "1.1"
default-features = false
features = ["all_components", "pattern_encoder"]

# Telegram API
[dependencies.frankenstein]
version = "0.24.1"
default-features = false
features = ["async-http-client"]
